--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,6 +152,14 @@ quotes {
 	clear: both;
 }
 
+.red {
+	background: red;
+}
+
+.green {
+	background: green;
+}
+
 .menu {
 	width: 300px;
 	height: 100%;
