--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,9 +305,7 @@ hr {
 
 .tools {
 	width: 100%;
-	height: 40px;
-	margin: 0 5px 0 0;
-	padding: 0 3px 0 0;
+	max-width: 500px;
 	display: flex;
 	align-items: center;
 	flex-direction: row;
@@ -421,6 +419,60 @@ hr {
 	padding: 0 10px 0 0;
 	text-align: right;
 }
+
+
+
+
+
+.topChat {
+	width: 100%;
+	margin: 1px 0 1px 0;
+	cursor: pointer;
+	display: grid;
+	align-items: center;
+	grid-template-columns: 70px auto;
+}
+
+.avatarChat {
+	width: 40px;
+	height: 40px;
+	margin: 0 10px 0 10px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	overflow: hidden;
+	background: var(--color-content-background);
+	border-radius: 50%;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+}
+
+.avatarTopChatInfo img {
+	display: block;
+	width: 100%;
+	border-radius: 50%;
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+}
+
+.topChatInfo {
+	display: grid;
+	grid-template-rows: repeat(2, 1fr);
+}
+
+.topChatInfoName,
+.topChatInfoText {
+	padding: 0 10px 0 0;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+
+
+
+
+
 
 
 
